--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none;
 }
-.timeCell { width: 70px; }
+.timeCell { width: 100px; text-align: center;}
 #postData { width: 200px; }
 .contents { padding-top: 150px; }
